--- a/search-home/index.html
+++ b/search-home/index.html
@@ -22,8 +22,8 @@
             <div class="d-flex justify-content-center">
                 <div class="nav-menu ">
                     <button class="float-end m-0 mt-3 m-2 navigation-link-btn">Create an account</button>
-                    <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link-p">Login</p> 
-                    
+                    <p class="float-end text-white m-0 mt-3 m-2 h4 navigation-link-p">Login</p>
+
                 </div>
 
             </div>
@@ -57,60 +57,61 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-9"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4">
+                            <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%"
-                            src="/images/1.png"
-                            alt="img not available"></div>
-                        <div class="col-8"><h4 class="card-title">Breakfast</h4>
+                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
