--- a/search-home/index.html
+++ b/search-home/index.html
@@ -51,66 +51,66 @@
     <section id="second-section">
         <div class="container">
             <div class="title m-2">
-                <h2>Quick Searches</h2>
-                <p>Discover restaurants by type of meal</p>
+                <h2 class="second-section-title">Quick Searches</h2>
+                <p class="second-section-title-para">Discover restaurants by type of meal</p>
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4">
+                    <div class="row custum-card">
+                        <div class="col-6">
                             <img height="100%" width="100%" src="/images/1.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                    <div class="row custum-card">
+                        <div class="col-6"> <img height="100%" width="100%" src="/images/2.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                    <div class="row custum-card">
+                        <div class="col-6"> <img height="100%" width="100%" src="/images/3.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                    <div class="row custum-card">
+                        <div class="col-6"> <img height="100%" width="100%" src="/images/4.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                    <div class="row custum-card">
+                        <div class="col-6"> <img height="100%" width="100%" src="/images/5.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row card">
-                        <div class="col-4"> <img height="100%" width="100%" src="/images/1.png" alt="img not available">
+                    <div class="row custum-card">
+                        <div class="col-6"> <img height="100%" width="100%" src="/images/6.png" alt="img not available">
                         </div>
-                        <div class="col-8">
+                        <div class="col-6 card-info-div">
                             <h4 class="card-title">Breakfast</h4>
                             <p class="card-para">Start your day with exclusive breakfast options</p>
                         </div>
