--- a/netfilix-homepage/index.html
+++ b/netfilix-homepage/index.html
@@ -1,18 +1,113 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
 
-    <!-- css file -->
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.ico">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
+    <!--got this link from netflix original page-->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>hello wolrd</h1>
+<header>
+    <div class="bg-img">
+        <div class="container-fluid">
 
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-danger" href="#">Netflix</a>
+                    <form class="d-flex" role="search">
+                        <select name="" id="" class="lang-dropdown p-2">
 
-    <script src="script.js"></script>
+                            <option value="english">English</option>
+                            <option value="hindi">हिन्दी</option>
+                        </select>
+                        <button class="btn btn-danger btn1" type="submit">Sign In</button>
+                    </form>
+                </div>
+            </nav>
+
+            <main class="text-center">
+                <h1>Unlimited movies, TV <br> shows and more.</h1>
+                <h3>Watch anywhere. Cancel anytime.</h3>
+                <p>Ready to watch? Enter your email to create or restart your membership.</p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Email Address"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-danger btn2" type="button" id="button-addon2">Get Started <span>&nbsp;<i
+                                class="fa-solid fa-greater-than"></i></span></button>
+                </div>
+            </main>
+        </div>
+    </div>
+</header>
+<section class="content-sec">
+    <div class="content1">
+        <div class="container row">
+            <div class="col-6">
+                <h1>Enjoy on your TV.</h1>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            </div>
+            <div class="col-6">
+                <img class="content-img" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
+                    alt="img not found">
+            </div>
+        </div>
+    </div>
+    <div class="content2">
+        <div class="container row">
+            <div class="col-5">
+                <img class="content-img" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg"
+                    alt="img not found">
+            </div>
+            <div class="col-7">
+                <h1>Download your shows to watch offline.</h1>
+                <p>Save your favourites easily and always have something to watch.</p>
+            </div>
+        </div>
+    </div>
+    <div class="content3">
+        <div class="container row">
+            <div class="col-6">
+                <h1>Watch everywhere.</h1>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+            </div>
+            <div class="col-6">
+                <img class="content-img" src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile-in.png"
+                    alt="img not found">
+            </div>
+        </div>
+    </div>
+    <div class="content4">
+        <div class="container row">
+            <div class="col-6">
+                <img class="content-img" src="https://occ-0-4994-2186.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABYjXrxZKtrzxQRVQNn2aIByoomnlbXmJ-uBy7du8a5Si3xqIsgerTlwJZG1vMpqer2kvcILy0UJQnjfRUQ5cEr7gQlYqXfxUg7bz.png?r=420"
+                    alt="img not found">
+            </div>
+            <div class="col-6">
+                <h1>Create profiles for children.</h1>
+                <p>Send children on adventures with their favourite characters in a space made just for them—free with
+                    your membership.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+<!-- for local js file (not js used but for better practice) -->
+<script src="script.js"></script>
 </body>
+
 </html>
